add profiles on the footer

--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@
             <!--==================== OUR NEWSLETTER ====================-->
             <section class="section newsletter">
                 <div class="newsletter__container container">
-                    <h2 class="section__title">Our Newsletter</h2>
+                    <h2 class="section__title">Our Newsletters</h2>
                     <p class="newsletter__description">
                         Promotion new products and sales. Directly to your inbox
                     </p>
