--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@
                     <form action="" class="newsletter__form">
                         <input type="text" placeholder="Enter your email" class="newsletter__input">
                         <button class="button">
-                            Sign up Now!
+                            Subscribe!
                         </button>
                     </form>
                 </div>
