--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
             
             <!--==================== CATEGORY ====================-->
             <section class="section category">
-                <h2 class="section__title">Pick your  <br> Kingdoms </h2>
+                <h2 class="section__title">Pick your  <br> Nations </h2>
 
                 <div class="category__container container grid">
                     <div class="category__data">
